--- a/mywebsite/searches/templates/searches/view.html
+++ b/mywebsite/searches/templates/searches/view.html
@@ -1,18 +1,36 @@
-{% extends "base.html" %}
+{% extends "starter.html" %}
 
 {% block content %}
 <div class="row">
 <div class="col-12 col-8 mx-auto">
+<div class="container overflow-hidden text-center" style="visibility:hidden;">
+  <div class="row gy-5">
+    <div class="col-6">
+      <div class="p-3">Custom column padding</div>
+    </div>
+    <div class="col-6">
+      <div class="p-3">Custom column padding</div>
+    </div>
+    </div>
+</div>
 {% if query %}
 
-<p class="lead">You searched for {{query}}</p>
+<p class="lead text-white fs-4">You searched for {{query}}</p>
 
 {% else %}
 
-  <form class="form-inline my-2 my-lg-0" action="{% url 'search' %}">
-      <input class="form-control mr-sm-2" type="search" name="q" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
+  <section>
+    <div class="container">
+      <div class="row">
+        <div class="col-md">
+          <form class="form-inline my-2 my-lg-0" action="{% url 'search' %}">
+            <input class="form-control mr-sm-2" type="search" name="q" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </section>
     
 {% endif %}
 
