--- a/mywebsite/templates/starter.html
+++ b/mywebsite/templates/starter.html
@@ -9,11 +9,11 @@
     
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
  <style>
-
+{% block background %}
 body{
     background: #13111C;
 }
-
+{% endblock %}
 
 @import url('https://fonts.googleapis.com/css2?family=Archivo:ital,wght@1,600&display=swap');
 
@@ -65,7 +65,7 @@ body{
           <a class="nav-link disabled">Disabled</a>
         </li>
       </ul>
-      <form class="d-flex" role="search">
+      <form class="d-flex" role="search" method="get" action="{% url 'search' %}">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success" type="submit">Search</button>
       </form>
