--- a/mywebsite/templates/starter.html
+++ b/mywebsite/templates/starter.html
@@ -35,11 +35,6 @@ body{
 }
 
 
-
-
-
-
-
 .articles{
  font-family: 'Poppins', sans-serif;;
 }
@@ -64,12 +59,22 @@ body{
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Account
           </a>
+          
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
+          {% if request.user.is_authenticated %}
+            <li><a class="dropdown-item" href="{% url 'profile' %}"><i class="fa-solid fa-user-large"></i> Profile</a></li>
+            <li><a class="dropdown-item" href="{% url 'logout' %}?next={{request.path}}">Logout</a></li>
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="#">Something else here</a></li>
+            {% else %}
+            <li><a class="dropdown-item" href="{% url 'login' %}?next={{request.path}}">Login</a></li>
+            <li><a class="dropdown-item" href="{% url 'createuser' %}"><i class="fa-solid fa-user-plus"></i> Signup</a></li>
+
+            {% endif %}
           </ul>
+          
+
+
         </li>
         <li class="nav-item">
           <a class="nav-link disabled">Disabled</a>
