--- a/mywebsite/templates/registration/login.html
+++ b/mywebsite/templates/registration/login.html
@@ -1,29 +1,111 @@
-{% extends "base.html" %}
 
-{% load bootstrap5 %}
+<!DOCTYPE html>
+{% load static %}
+<html>
+<head>
+  <!-- Standard Meta -->
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
+  <!-- Site Properties -->
+  <title>Login</title>
 
-{# Load CSS and JavaScript #}
-{% bootstrap_css %}
-{% bootstrap_javascript %}
-{# Display django.contrib.messages as Bootstrap alerts #}
-{% bootstrap_messages %}
-
-{% block title %}
-Login 
-{% endblock  %}
-
-
-{% block content %}
-<div class="row mt-md-5 mt-3">
-<div class="col-xs-12  col-md-6 mb-3 mx-auto">
-    <div class="card">
+   <link rel="stylesheet" type="text/css" href="{% static 'semantic/semantic.min.css' %}">
+     <link href="{% static 'fontawesomefree/css/all.min.css' %}" rel="stylesheet" type="text/css">
     
- <h6 class="card-title m-3">Login</h6>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link href="{% static 'fontawesomefree/css/fontawesome.css' %}" rel="stylesheet" type="text/css">
+    <link href="{% static 'fontawesomefree/css/brands.css' %}" rel="stylesheet" type="text/css">
+    <link href="{% static 'fontawesomefree/css/solid.css' %}" rel="stylesheet" type="text/css">
+  
 
- 
- <div class="card-body">
+  <script src="assets/library/jquery.min.js"></script>
+  <script src="../dist/components/form.js"></script>
+  <script src="../dist/components/transition.js"></script>
 
+
+
+
+
+
+
+  <style type="text/css">
+
+
+
+  @import url('https://fonts.googleapis.com/css2?family=Archivo:ital,wght@1,600&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=PT+Sans&display=swap');
+
+
+
+
+
+
+
+.my-titles{
+  font-family: 'PT Sans', sans-serif;
+}
+
+
+.articles{
+ font-family: 'Poppins', sans-serif;;
+}
+    body {
+      background-color: #DADADA;
+    }
+    body > .grid {
+      height: 100%;
+    }
+    .image {
+      margin-top: -100px;
+    }
+    .column {
+      max-width: 450px;
+    }
+  </style>
+  <script>
+  $(document)
+    .ready(function() {
+      $('.ui.form')
+        .form({
+          fields: {
+            email: {
+              identifier  : 'email',
+              rules: [
+                {
+                  type   : 'empty',
+                  prompt : 'Please enter your e-mail'
+                },
+                {
+                  type   : 'email',
+                  prompt : 'Please enter a valid e-mail'
+                }
+              ]
+            },
+            password: {
+              identifier  : 'password',
+              rules: [
+                {
+                  type   : 'empty',
+                  prompt : 'Please enter your password'
+                },
+                {
+                  type   : 'length[6]',
+                  prompt : 'Your password must be at least 6 characters'
+                }
+              ]
+            }
+          }
+        })
+      ;
+    })
+  ;
+  </script>
+</head>
+<body>
 {% if messages %} 
 
 <div class="alert alert-success messages" role="alert"> {% for message in messages %} 
@@ -34,8 +116,38 @@ Login
 {% endfor %} 
 
 {% endif %}
-Dont have an account? <a href="{% url 'createuser' %}" class="card-link" >signup</a>
-{% if form.errors %}
+<div class="ui middle aligned center aligned grid">
+  <div class="column">
+    <h2 class="ui teal image header">
+      <img src="assets/images/logo.png" class="image">
+      <div class="content">
+        Log-in to your account
+      </div>
+    </h2>
+    <form class="ui large form" method="post" action="{% url 'login' %}">
+    {% csrf_token %}
+  
+      <div class="ui stacked segment">
+        <div class="field">
+          <div class="ui left icon input">
+            <i class="user icon"></i>
+            {{form.username}}
+            {{form.username.errors}}
+
+          </div>
+        </div>
+        <div class="field">
+          <div class="ui left icon input">
+            <i class="lock icon"></i>
+            {{form.password}}
+            {{form.password.errors}}
+          </div>
+        </div>
+        <input type="submit" class="ui fluid large purple submit button inverted" value="Login">
+      </div>
+
+      <div class="ui error message">
+      {% if form.errors %}
 <p>Your email and password didn't match. Please try again.</p>
 {% endif %}
 {% if next %}
@@ -46,56 +158,51 @@ please login with an account that has access.</p>
 <p>Please login to see this page.</p>
 {% endif %}
 {% endif %}
+      </div>
 
-<form method="post" action="{% url 'login' %}">
-{% csrf_token %}
-  
-  {% bootstrap_form form show_label=False %}
-  
-  
-<!--
+    </form>
 
-{{ form.non_field_errors }}
-
-
-  <div class="form-group">
-  
-  
-  <label for="exampleInputEmail1">{{ form.username.label_tag }}</label>
-    {{forms.username.errors}}
-    {{form.username}}
-
-
+    <div class="ui message">
+      New to us? <a href="{% url 'createuser' %}">Sign Up</a>
+    </div>
+  </div>
 </div>
+<script
+  src="https://code.jquery.com/jquery-3.1.1.min.js"
+  integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+  crossorigin="anonymous"></script>
+  <script src="{% static 'fontawesomefree/js/all.min.js' %}"></script>
+<script src="{% static 'semantic/semantic.min.js' %}"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.5.0/semantic.min.js" integrity="sha512-Xo0Jh8MsOn72LGV8kU5LsclG7SUzJsWGhXbWcYs2MAmChkQzwiW/yTQwdJ8w6UA9C6EVG18GHb/TrYpYCjyAQw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
-  <div class="form-group">
-  
-    <label for="exampleInputPassword1">{{ form.password.label_tag }}</label>
-    {{form.password.errors}}
-    {{form.password}}
+</body>
 
-</div>
-
--->
-{% buttons %}
-<button type="submit" class="btn btn-block btn-primary">Login</button>
-{% endbuttons %}
-<input type="hidden" name="next" value="{{ next }}">
-</form>
-
-
-{# Assumes you setup the password_reset view in your URLconf #}
-<p><a href="{% url 'password_reset' %}">Lost password?</a></p>
-
-</div>
-</div>
-</div>
-</div>
+</html>
 
 
 
 
-{% endblock %}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
