--- a/mywebsite/blog/templates/blog/detail.html
+++ b/mywebsite/blog/templates/blog/detail.html
@@ -14,31 +14,63 @@ justify-content:space-around;
 {% endblock %}
 {% block content %}
 {% load static %}
-{% if messages %} 
+
+{% if messages %}
+
+{% for message in messages %}
 
 
-<div class="alert alert-success alert-dismissable messages" role="alert"> {% for message in messages %} 
+{% if message.tags == 'success' %}
 
-  <div{% if message.tags %} class="{{ message.tags }}"{% endif %}> <img src="data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTMiIGhlaWdodD0iMTMiIHZpZXdCb3g9IjAgMCAxNzkyIDE3OTIiIHhtbG5z
-	  PSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyI+CiAgPHBhdGggZmlsbD0iIzcwYmYyYiIgZD0i
-	  TTE0MTIgNzM0cTAtMjgtMTgtNDZsLTkxLTkwcS0xOS0xOS00NS0xOXQtNDUgMTlsLTQwOCA0MDct
-	  MjI2LTIyNnEtMTktMTktNDUtMTl0LTQ1IDE5bC05MSA5MHEtMTggMTgtMTggNDYgMCAyNyAxOCA0
-	  NWwzNjIgMzYycTE5IDE5IDQ1IDE5IDI3IDAgNDYtMTlsNTQzLTU0M3ExOC0xOCAxOC00NXptMjUy
-	  IDE2MnEwIDIwOS0xMDMgMzg1LjV0LTI3OS41IDI3OS41LTM4NS41IDEwMy0zODUuNS0xMDMtMjc5
-	  LjUtMjc5LjUtMTAzLTM4NS41IDEwMy0zODUuNSAyNzkuNS0yNzkuNSAzODUuNS0xMDMgMzg1LjUg
-	  MTAzIDI3OS41IDI3OS41IDEwMyAzODUuNXoiLz4KPC9zdmc+Cg== " alt="My image">  
-	  
-	  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-	  
-	  
-	  
-{{ message}}
-</div>
-{% endfor %} 
-</div>
+<script src="{% static 'js/jquery.js' %}"></script>  
+<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+<p class="msg">{{message}}</p>
+<script>
+ $(document).ready(function(){
+ $(".target").text($(".msg").text());
+  $("#updatemessage").modal('show');
+ });
+</script>
+
 {% endif %}
+
+
+    
+{% endfor %}
+
+{% endif %}
+
+
+<!-- Button trigger modal -->
+
+
+<!-- Modal -->
+<div class="modal fade" id="updatemessage" tabindex="-1" aria-labelledby="updatemessageLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title text-dark site" id="updatemessageLabel">Perfect!</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body text-center">
+        <div class="text-center text-success mt-3">
+        <i class="far fa-check-circle fa-6x" style="color: #a5dc86;"></i>
+        </div>
+        <br>
+        <div class="mb-3 text-dark carousel-p target articles"></div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary btn-sm" style="width:65px;" data-bs-dismiss="modal">Close</button>
+       
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+
+
 <div class="row {% if request.user.is_authenticated and request.user.is_staff  and author == visitor %}mb-4 {% endif %}">
   
     {% include 'blog/list-inline.html' with blog_post=object detail=True %}
@@ -83,5 +115,9 @@ justify-content:space-around;
 </div>
 
 
-</div>
+
+
+
+
+
 {% endblock %}
