--- a/mywebsite/blog/templates/blog/list-inline.html
+++ b/mywebsite/blog/templates/blog/list-inline.html
@@ -11,7 +11,7 @@
   </div>
 </div>
 
-<div class="container">
+<div class="container p-4">
 
 
 
@@ -90,10 +90,82 @@
         <div class="ui label" style="color:#594327 !important"><i class="user icon" ></i>{{blog_post.user.first_name}}</div>
         
       </div>
-    </div>
+      <div class="container overflow-hidden text-center" style="visibility:hidden;">
+        <div class="row gy-5">
+          <div class="col-6">
+            <div class="p-3">Custom column padding</div>
+          </div>
+       
+        
+        </div>
+      </div>
+      <!--segment-->
+
+  <div class="extra text-white ">
+        
+    <div class="ui label me-4" style="color:#594327 !important;cursor: pointer;  "><i class="fa-solid fa-comments fa-2x"></i></div>
+    <div class="ui label me-4" style="color:#594327 !important; cursor: pointer;"><i class="fa-solid fa-thumbs-up fa-2x"></i> </div>
+    <div class="ui label me-4" style="color:#594327 !important; cursor: pointer;"><i class="fa-solid fa-share-from-square fa-2x"></i> </div>
+    
+    
+
   
+</div>
 
-
+      <div class="container overflow-hidden text-center" style="visibility:hidden;">
+        <div class="row gy-5">
+          <div class="col-6">
+            <div class="p-3">Custom column padding</div>
+          </div>
+          <div class="col-6">
+            <div class="p-3">Custom column padding</div>
+          </div>
+        
+        </div>
+        {% load humanize %}
+      </div>
+{% for comment in comment %}
+      <div class="ui feed mb-4">
+        <div class="event">
+            <div class="label">
+            <img src="https://semantic-ui.com/images/avatar/small/joe.jpg">
+            </div>
+            <div class="content">
+            <div class="summary text-white">
+              <a class="text-white">{{comment.user.get_full_name|capfirst}}</a> 
+              <div class="date">
+              3 days ago
+              </div>
+            </div>
+            <div class="extra text text-white articles">
+              {{comment.comment}}
+            </div>
+            <div class="meta">
+              <a class="like text-white text-decoration-none">
+                <i class="fa-regular fa-calendar"></i> {{comment.timestamp|naturaltime}}
+              </a>
+              <a class="like text-white text-decoration-none">
+              <i class="like icon "></i> 5 Likes
+              </a>
+            </div>
+            </div>
+          </div>
+      
+      </div>
+      {% endfor %}
+      <div class="container overflow-hidden text-center" style="visibility:hidden;">
+        <div class="row gy-5">
+          <div class="col-6">
+            <div class="p-3">Custom column padding</div>
+          </div>
+          <div class="col-6">
+            <div class="p-3">Custom column padding</div>
+          </div>
+        
+        </div>
+      </div>
+    </div>
+    
 
 {% endif %}
 </div>
