--- a/mywebsite/blog/templates/blog/detail.html
+++ b/mywebsite/blog/templates/blog/detail.html
@@ -24,7 +24,7 @@ justify-content:space-around;
 
 <script src="{% static 'js/jquery.js' %}"></script>  
 <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-<p class="msg">{{message}}</p>
+<p class="msg" style="visibility:hidden;">{{message}}</p>
 <script>
  $(document).ready(function(){
  $(".target").text($(".msg").text());
