--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -102,7 +102,7 @@ justify-content:space-around;
       <div class="ui button inverted red"><i class="fa-solid fa-trash-can"></i> Delete Post</div>
     </a>
     </div>
-  
+  </div>
 </div>
 </footer>      
 
