--- a/blog/templates/blog/profile.html
+++ b/blog/templates/blog/profile.html
@@ -153,6 +153,7 @@ Dashboard | Profile
 </div>    
 <footer class="fixed-bottom">
 <div class="container">
+
   <div class="ui menu d-flex justify-content-center pt-2 pb-2" style="background:#13111C !important;">
     <div class="item">
       <a href="{% url 'home' %}">
@@ -171,7 +172,8 @@ Dashboard | Profile
       <div class="ui button inverted teal">Blog  Posts</div>
     </a>
     </div>
-  
+  </div>
+
 </div>
 </footer>
 {% endblock %}
