--- a/templates/starter.html
+++ b/templates/starter.html
@@ -26,7 +26,21 @@ body{
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=PT+Sans&display=swap');
 
+footer ul{
+  margin:0;
+  padding:0;
+  list-style:none;
+}
 
+footer li{
+  display:inline-block;
+}
+
+footer li a{
+  padding:6px;
+  font-size: 14px;
+  text-decoration: none;
+}
 
 
 
